# mva-imagerie-numerique

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  README.md  conclusion.html  experiments.html  genindex.html  guided_filter.html  image_fusion.html  intro.html  load_data.html  objects.inv  own_data.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg
_sources/: conclusion.md  experiments.md  guided_filter.ipynb  guided_filter.md  image_fusion.md  intro.md  load_data.md  own_data.md
data/MEFDatabase/: MOS.mat  Readme.txt  imgName.mat
data/lytro/: Readme.txt
data/petrovic/: Readme.txt  fused001_1.tif  fused001_2.tif  fused002_1.tif  fused002_2.tif  fused003_1.tif  fused003_2.tif  fused004_1.tif  fused004_2.tif  fused005_1.tif  fused005_2.tif  fused006_1.tif  fused006_2.tif  fused007_1.tif  fused007_2.tif  fused008_1.tif  fused008_2.tif  fused009_1.tif  fused009_2.tif  fused010_1.tif  fused010_2.tif  fused011_1.tif  fused011_2.tif  fused012_1.tif  fused012_2.tif  fused013_1.tif  fused013_2.tif  fused014_1.tif  fused014_2.tif  fused015_1.tif  fused015_2.tif  fused016_1.tif  fused016_2.tif  fused017_1.tif  fused017_2.tif  fused018_1.tif  fused018_2.tif  fused019_1.tif  fused019_2.tif  fused020_1.tif  (+193 more)
docs/: _config.yml  _toc.yml  experiments.md  guided_filter.md  image_fusion.md  imports.py  intro.md  load_data.md  references.bib  rendu.md
notebook/: filters.py  rendu.ipynb  test.ipynb
src/: filters.py  fusion.py
test/: filters.py  test.ipynb  test_data.py  test_example.py  test_filters.py  test_fusion.py
(+5 files in other folders)
