[metadata]
name = gf
description = python implementation of the image fusion with guided filtering algorithm
authors =
	Gabriel Belouze
	Raphaël Rozenberg
license = MIT
classifiers =
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages =
	gf
package_dir =
	=src
install_requires =
	numpy >= 1.20.0
	scipy >= 1.7.0
python_requires = >=3.8
zip_safe = no
